--- a/CSS09디자인실습/test07.html
+++ b/CSS09디자인실습/test07.html
@@ -1,49 +1,371 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../bootstrap/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../bootstrap/bootstrap/css/bootstrap-theme.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="board.css">
-</head>
-<body>
-    <section>
-        <row>
-            <div class="col-md-3 col-sm-6">
-                <div class="prod-list">
-                    <div class="prod-img">
-                        <img src="image/nike/nike1.jpg">
-                    </div>
-                    <div class="prod-content">
-                        <div class="info">
-                            <span>나이키 에어맥스</span>
-                            <span>MEN 신발 라이프스타일</span>
-                            <span>8칼라</span>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="../bootstrap/bootstrap/css/bootstrap.css">
+        <link rel="stylesheet" href="../bootstrap/bootstrap/css/bootstrap-theme.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="board.css">
+    </head>
+
+    <body>
+        <section>
+            <row>
+                <div class="col-md-3 col-sm-6">
+                    <div class="prod-list">
+                        <div class="prod-img">
+                            <img src="image/nike/nike1.jpg">
                         </div>
-                        <div class="price">
-                            <strong>1990,000원</strong>
+                        <div class="prod-content">
+                            <div class="info">
+                                <span>나이키 에어맥스</span>
+                                <span>MEN 신발 라이프스타일</span>
+                                <span>8칼라</span>
+                            </div>
+                            <div class="price">
+                                <strong>1990,000원</strong>
+                            </div>
+                        </div>
+
+                        <div class="prod_color">
+                            <ul>
+                                <li><img src="image/nike/color1.jpg"></li>
+                                <li><img src="image/nike/color2.jpg"></li>
+                                <li><img src="image/nike/color3.jpg"></li>
+                                <li><img src="image/nike/color4.jpg"></li>
+                                <li><img src="image/nike/color5.jpg"></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
 
-<div class="prod_color">
-    <ul>
-        <li><img src="image/nike/color1.jpg"></li>
-        <li><img src="image/nike/color1.jpg"></li>
-        <li><img src="image/nike/color1.jpg"></li>
-        <li><img src="image/nike/color1.jpg"></li>
-        <li><img src="image/nike/color1.jpg"></li>
-    </ul>
-</div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="prod-list">
+                        <div class="prod-img">
+                            <img src="image/nike/nike1.jpg">
+                        </div>
+                        <div class="prod-content">
+                            <div class="info">
+                                <span>나이키 에어맥스</span>
+                                <span>MEN 신발 라이프스타일</span>
+                                <span>8칼라</span>
+                            </div>
+                            <div class="price">
+                                <strong>1990,000원</strong>
+                            </div>
+                        </div>
 
-            </div>
-            
-        </row>
-    </section>
-</body>
+                        <div class="prod_color">
+                            <ul>
+                                <li><img src="image/nike/color1.jpg"></li>
+                                <li><img src="image/nike/color2.jpg"></li>
+                                <li><img src="image/nike/color3.jpg"></li>
+                                <li><img src="image/nike/color4.jpg"></li>
+                                <li><img src="image/nike/color5.jpg"></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+                    <div class="prod-list">
+                        <div class="prod-img">
+                            <img src="image/nike/nike1.jpg">
+                        </div>
+                        <div class="prod-content">
+                            <div class="info">
+                                <span>나이키 에어맥스</span>
+                                <span>MEN 신발 라이프스타일</span>
+                                <span>8칼라</span>
+                            </div>
+                            <div class="price">
+                                <strong>1990,000원</strong>
+                            </div>
+                        </div>
+
+                        <div class="prod_color">
+                            <ul>
+                                <li><img src="image/nike/color1.jpg"></li>
+                                <li><img src="image/nike/color2.jpg"></li>
+                                <li><img src="image/nike/color3.jpg"></li>
+                                <li><img src="image/nike/color4.jpg"></li>
+                                <li><img src="image/nike/color5.jpg"></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                                <div class="col-md-3 col-sm-6">
+                    <div class="prod-list">
+                        <div class="prod-img">
+                            <img src="image/nike/nike1.jpg">
+                        </div>
+                        <div class="prod-content">
+                            <div class="info">
+                                <span>나이키 에어맥스</span>
+                                <span>MEN 신발 라이프스타일</span>
+                                <span>8칼라</span>
+                            </div>
+                            <div class="price">
+                                <strong>1990,000원</strong>
+                            </div>
+                        </div>
+
+                        <div class="prod_color">
+                            <ul>
+                                <li><img src="image/nike/color1.jpg"></li>
+                                <li><img src="image/nike/color2.jpg"></li>
+                                <li><img src="image/nike/color3.jpg"></li>
+                                <li><img src="image/nike/color4.jpg"></li>
+                                <li><img src="image/nike/color5.jpg"></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+                    <div class="prod-list">
+                        <div class="prod-img">
+                            <img src="image/nike/nike1.jpg">
+                        </div>
+                        <div class="prod-content">
+                            <div class="info">
+                                <span>나이키 에어맥스</span>
+                                <span>MEN 신발 라이프스타일</span>
+                                <span>8칼라</span>
+                            </div>
+                            <div class="price">
+                                <strong>1990,000원</strong>
+                            </div>
+                        </div>
+
+                        <div class="prod_color">
+                            <ul>
+                                <li><img src="image/nike/color1.jpg"></li>
+                                <li><img src="image/nike/color2.jpg"></li>
+                                <li><img src="image/nike/color3.jpg"></li>
+                                <li><img src="image/nike/color4.jpg"></li>
+                                <li><img src="image/nike/color5.jpg"></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+                    <div class="prod-list">
+                        <div class="prod-img">
+                            <img src="image/nike/nike1.jpg">
+                        </div>
+                        <div class="prod-content">
+                            <div class="info">
+                                <span>나이키 에어맥스</span>
+                                <span>MEN 신발 라이프스타일</span>
+                                <span>8칼라</span>
+                            </div>
+                            <div class="price">
+                                <strong>1990,000원</strong>
+                            </div>
+                        </div>
+
+                        <div class="prod_color">
+                            <ul>
+                                <li><img src="image/nike/color1.jpg"></li>
+                                <li><img src="image/nike/color2.jpg"></li>
+                                <li><img src="image/nike/color3.jpg"></li>
+                                <li><img src="image/nike/color4.jpg"></li>
+                                <li><img src="image/nike/color5.jpg"></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+                    <div class="prod-list">
+                        <div class="prod-img">
+                            <img src="image/nike/nike1.jpg">
+                        </div>
+                        <div class="prod-content">
+                            <div class="info">
+                                <span>나이키 에어맥스</span>
+                                <span>MEN 신발 라이프스타일</span>
+                                <span>8칼라</span>
+                            </div>
+                            <div class="price">
+                                <strong>1990,000원</strong>
+                            </div>
+                        </div>
+
+                        <div class="prod_color">
+                            <ul>
+                                <li><img src="image/nike/color1.jpg"></li>
+                                <li><img src="image/nike/color2.jpg"></li>
+                                <li><img src="image/nike/color3.jpg"></li>
+                                <li><img src="image/nike/color4.jpg"></li>
+                                <li><img src="image/nike/color5.jpg"></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+                    <div class="prod-list">
+                        <div class="prod-img">
+                            <img src="image/nike/nike1.jpg">
+                        </div>
+                        <div class="prod-content">
+                            <div class="info">
+                                <span>나이키 에어맥스</span>
+                                <span>MEN 신발 라이프스타일</span>
+                                <span>8칼라</span>
+                            </div>
+                            <div class="price">
+                                <strong>1990,000원</strong>
+                            </div>
+                        </div>
+
+                        <div class="prod_color">
+                            <ul>
+                                <li><img src="image/nike/color1.jpg"></li>
+                                <li><img src="image/nike/color2.jpg"></li>
+                                <li><img src="image/nike/color3.jpg"></li>
+                                <li><img src="image/nike/color4.jpg"></li>
+                                <li><img src="image/nike/color5.jpg"></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+                    <div class="prod-list">
+                        <div class="prod-img">
+                            <img src="image/nike/nike1.jpg">
+                        </div>
+                        <div class="prod-content">
+                            <div class="info">
+                                <span>나이키 에어맥스</span>
+                                <span>MEN 신발 라이프스타일</span>
+                                <span>8칼라</span>
+                            </div>
+                            <div class="price">
+                                <strong>1990,000원</strong>
+                            </div>
+                        </div>
+
+                        <div class="prod_color">
+                            <ul>
+                                <li><img src="image/nike/color1.jpg"></li>
+                                <li><img src="image/nike/color2.jpg"></li>
+                                <li><img src="image/nike/color3.jpg"></li>
+                                <li><img src="image/nike/color4.jpg"></li>
+                                <li><img src="image/nike/color5.jpg"></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+                    <div class="prod-list">
+                        <div class="prod-img">
+                            <img src="image/nike/nike1.jpg">
+                        </div>
+                        <div class="prod-content">
+                            <div class="info">
+                                <span>나이키 에어맥스</span>
+                                <span>MEN 신발 라이프스타일</span>
+                                <span>8칼라</span>
+                            </div>
+                            <div class="price">
+                                <strong>1990,000원</strong>
+                            </div>
+                        </div>
+
+                        <div class="prod_color">
+                            <ul>
+                                <li><img src="image/nike/color1.jpg"></li>
+                                <li><img src="image/nike/color2.jpg"></li>
+                                <li><img src="image/nike/color3.jpg"></li>
+                                <li><img src="image/nike/color4.jpg"></li>
+                                <li><img src="image/nike/color5.jpg"></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+                    <div class="prod-list">
+                        <div class="prod-img">
+                            <img src="image/nike/nike1.jpg">
+                        </div>
+                        <div class="prod-content">
+                            <div class="info">
+                                <span>나이키 에어맥스</span>
+                                <span>MEN 신발 라이프스타일</span>
+                                <span>8칼라</span>
+                            </div>
+                            <div class="price">
+                                <strong>1990,000원</strong>
+                            </div>
+                        </div>
+
+                        <div class="prod_color">
+                            <ul>
+                                <li><img src="image/nike/color1.jpg"></li>
+                                <li><img src="image/nike/color2.jpg"></li>
+                                <li><img src="image/nike/color3.jpg"></li>
+                                <li><img src="image/nike/color4.jpg"></li>
+                                <li><img src="image/nike/color5.jpg"></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+                    <div class="prod-list">
+                        <div class="prod-img">
+                            <img src="image/nike/nike1.jpg">
+                        </div>
+                        <div class="prod-content">
+                            <div class="info">
+                                <span>나이키 에어맥스</span>
+                                <span>MEN 신발 라이프스타일</span>
+                                <span>8칼라</span>
+                            </div>
+                            <div class="price">
+                                <strong>1990,000원</strong>
+                            </div>
+                        </div>
+
+                        <div class="prod_color">
+                            <ul>
+                                <li><img src="image/nike/color1.jpg"></li>
+                                <li><img src="image/nike/color2.jpg"></li>
+                                <li><img src="image/nike/color3.jpg"></li>
+                                <li><img src="image/nike/color4.jpg"></li>
+                                <li><img src="image/nike/color5.jpg"></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="text-center">
+                    <ul class="pagination">
+                        <li><a href="@@">1</a></li>
+                        <li><a href="@@">2</a></li>
+                        <li><a href="@@">3</a></li>
+                        <li><a href="@@">4</a></li>
+                        <li><a href="@@">5</a></li>
+                        <li><a href="@@">6</a></li>
+
+                    </ul>
+                </div>
+
+            </row>
+        </section>
+    </body>
+
 </html>
