--- a/Test/test04.html
+++ b/Test/test04.html
@@ -25,7 +25,7 @@
                     <div class="title">
                         <p>로그인</p>
                     </div>
-                    <dic class="allBox col-lg-12">
+                    <dic class="allBox col-xs-12">
                         <div class="imagebox col-md-6">
                             <img src="../CSS09디자인실습/image/nike/nike2.jpg">
                         </div>
